feat(web,backend): nombres de jugadores en partida + indicador 'quién soy'