@@ -10,28 +10,28 @@ class MatchmakingQueueTest {
     void enqueueAddsPlayerToSnapshot() {
         MatchmakingQueue queue = new MatchmakingQueue();
 
-        queue.enqueue("alice", 1500, TimeControl.BLITZ);
+        queue.enqueue("alice", "alice", 1500, TimeControl.BLITZ);
 
         assertThat(queue.snapshot()).hasSize(1);
-        assertThat(queue.snapshot().getFirst().playerId()).isEqualTo("alice");
+        assertThat(queue.snapshot().get(0).playerId()).isEqualTo("alice");
     }
 
     @Test
     void enqueueReplacesAnyExistingEntryForTheSamePlayer() {
         MatchmakingQueue queue = new MatchmakingQueue();
 
-        queue.enqueue("alice", 1500, TimeControl.BLITZ);
-        queue.enqueue("alice", 1600, TimeControl.RAPID); // se vuelve a apuntar con otros datos
+        queue.enqueue("alice", "alice", 1500, TimeControl.BLITZ);
+        queue.enqueue("alice", "alice", 1600, TimeControl.RAPID); // se vuelve a apuntar con otros datos
 
         assertThat(queue.snapshot()).hasSize(1);
-        assertThat(queue.snapshot().getFirst().rating()).isEqualTo(1600);
-        assertThat(queue.snapshot().getFirst().timeControl()).isEqualTo(TimeControl.RAPID);
+        assertThat(queue.snapshot().get(0).rating()).isEqualTo(1600);
+        assertThat(queue.snapshot().get(0).timeControl()).isEqualTo(TimeControl.RAPID);
     }
 
     @Test
     void removeTakesThePlayerOutOfTheQueue() {
         MatchmakingQueue queue = new MatchmakingQueue();
-        queue.enqueue("alice", 1500, TimeControl.BLITZ);
+        queue.enqueue("alice", "alice", 1500, TimeControl.BLITZ);
 
         queue.remove("alice");
 
@@ -41,9 +41,9 @@ class MatchmakingQueueTest {
     @Test
     void removeAllRemovesExactlyTheGivenPlayersAndKeepsTheRest() {
         MatchmakingQueue queue = new MatchmakingQueue();
-        queue.enqueue("alice", 1500, TimeControl.BLITZ);
-        queue.enqueue("bob", 1500, TimeControl.BLITZ);
-        queue.enqueue("carol", 1500, TimeControl.BLITZ);
+        queue.enqueue("alice", "alice", 1500, TimeControl.BLITZ);
+        queue.enqueue("bob", "bob", 1500, TimeControl.BLITZ);
+        queue.enqueue("carol", "carol", 1500, TimeControl.BLITZ);
 
         var toRemove = queue.snapshot().stream()
                 .filter(p -> !p.playerId().equals("carol"))
@@ -51,6 +51,6 @@ class MatchmakingQueueTest {
         queue.removeAll(toRemove);
 
         assertThat(queue.snapshot()).hasSize(1);
-        assertThat(queue.snapshot().getFirst().playerId()).isEqualTo("carol");
+        assertThat(queue.snapshot().get(0).playerId()).isEqualTo("carol");
     }
 }
